--- a/assets/css/edit branch.css
+++ b/assets/css/edit branch.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: peachpuff;
+    background-color: peachpuffww;
     display: flex;
     justify-content: center;
     align-items: center;
