--- a/views/index.pug
+++ b/views/index.pug
@@ -4,8 +4,6 @@ html(lang="en")
     meta(charset="utf-8")
     meta(content="width=device-width, initial-scale=1.0", name="viewport")
     title my website
-    meta(name="description", content=)
-    meta(name="keywords", content=)
     // Favicons
     link(href="assets/img/favicon.png", rel="icon")
     link(href="assets/img/apple-touch-icon.png", rel="apple-touch-icon")
@@ -65,7 +63,7 @@ html(lang="en")
                         | We are happy to have you here!
                       .d-flex(data-aos="fade-up", data-aos-delay="200")
                     .col-lg-5.order-1.order-lg-2.hero-img(data-aos="zoom-out")
-                      img.img-fluid.animated(src="assets/img/produce/home.jpg", alt=)
+                      img.img-fluid.animated(src="assets/img/produce/home.jpg", alt="produce-image")
               // /Hero Section
               // Menu Section
               section#menu.menu.section
@@ -91,37 +89,37 @@ html(lang="en")
                           .row.gy-5
                             // image src change images
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Beans.jpg", alt=)
+                              img.menu-img.img-fluid(src="assets/img/produce/Beans.jpg", alt="produce-image")
                               h4 Beans
                               p.qunatity
                                 | 595 Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Maize.jpg", alt=)
+                              img.menu-img.img-fluid(src="assets/img/produce/Maize.jpg", alt="produce-image")
                               h4 Grain-maize
                               p.qunatity
                                 | 1495Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Cowpeas.jpg", alt=)
+                              img.menu-img.img-fluid(src="assets/img/produce/Cowpeas.jpg", alt="produce-image")
                               h4 Cowpeas
                               p.qunatity
                                 | 895Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/G-nuts.jpg", alt=)
+                              img.menu-img.img-fluid(src="assets/img/produce/G-nuts.jpg", alt="produce-image")
                               h4 G-nuts
                               p.qunatity
                                 | 1295Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/rice.jpg", alt=)
+                              img.menu-img.img-fluid(src="assets/img/produce/rice.jpg", alt="produce-image")
                               h4 Rice
                               p.qunatity
                                 | 1296Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Soybeans.jpg", alt=)
+                              img.menu-img.img-fluid(src="assets/img/produce/Soybeans.jpg", alt="produce-image")
                               h4 Soybeans
                               p.qunatity
                                 | 995Tonnes
