--- a/views/login.pug
+++ b/views/login.pug
@@ -2,13 +2,13 @@ doctype html
 html(lang="en")
   head
     meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Login Page
-    Link(rel="stylesheet" href="/css/login.css")     
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    title Login-page
+    link(rel="stylesheet", href="assets/css/login.css")
   body
     h2 Login
-    form(action="/login-page" method="POST")
-      input(type="email" name="email" placeholder="Your Email")
-      input(type="password" name="password" placeholder="Password")
-      input(type="submit" value="Login")
-    a(href="/signup-page") Don't have an account? Register
+    form(action="/login", method="POST")
+      input(type="email", name="email", placeholder="Your Email")
+      input(type="password", name="password", placeholder="Password")
+      input(type="submit", value="Login")
+    a(href="/register") Do not have an account? Register
