added files in public folder

--- a/views/alluser.pug
+++ b/views/alluser.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title All-users-page
-    link(rel="stylesheet", href="assets/css/all-user.css")
+    link(rel="stylesheet", href="public/css/all-user.css")
   body
     header
       nav
