--- a/views/index.pug
+++ b/views/index.pug
@@ -44,14 +44,14 @@ html(lang="en")
                   br
             button.button
               li
-                a(href="../login.html") signin
+                a(href="/login") signin
             button.button
               li
-                a(href="/Yummy/signup.html") register
+                a(href="/signup") register
             i.mobile-nav-toggle.d-xl-none.bi.bi-list
             main.main
               // Hero Section
-              section#hero.hero.section(style="background-image: url(assets/img/produce/home.jpg);background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;color: white;")
+              section#hero.hero.section(style="background-image: url();background-attachment: fixed;background-position: center;background-repeat: no-repeat;background-size: cover;color: white;")
                 .container
                   .row.gy-4.justify-content-center.justify-content-lg-between
                     .col-lg-5.order-2.order-lg-1.d-flex.flex-column.justify-content-center
@@ -63,7 +63,7 @@ html(lang="en")
                         | We are happy to have you here!
                       .d-flex(data-aos="fade-up", data-aos-delay="200")
                     .col-lg-5.order-1.order-lg-2.hero-img(data-aos="zoom-out")
-                      img.img-fluid.animated(src="assets/img/produce/home.jpg", alt="produce-image")
+                      img.img-fluid.animated(src="public/css/image/produce/home.jpg", alt="produce-image")
               // /Hero Section
               // Menu Section
               section#menu.menu.section
@@ -89,37 +89,37 @@ html(lang="en")
                           .row.gy-5
                             // image src change images
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Beans.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/css/image/produce/Beans.jpg", alt="produce-image")
                               h4 Beans
                               p.qunatity
                                 | 595 Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Maize.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/css/image/produce/Maize.jpg", alt="produce-image")
                               h4 Grain-maize
                               p.qunatity
                                 | 1495Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Cowpeas.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/css/image/produce/Cowpeas.jpg", alt="produce-image")
                               h4 Cowpeas
                               p.qunatity
                                 | 895Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/G-nuts.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/css/image/produce/G-nuts.jpg", alt="produce-image")
                               h4 G-nuts
                               p.qunatity
                                 | 1295Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/rice.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/css/image/produce/rice.jpg", alt="produce-image")
                               h4 Rice
                               p.qunatity
                                 | 1296Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="assets/img/produce/Soybeans.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/css/image/produce/Soybeans.jpg", alt="produce-image")
                               h4 Soybeans
                               p.qunatity
                                 | 995Tonnes
