--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@ html(lang="en")
     link(href="assets/vendor/glightbox/css/glightbox.min.css", rel="stylesheet")
     link(href="assets/vendor/swiper/swiper-bundle.min.css", rel="stylesheet")
     // Main CSS File
-    link(href="assets/css/main.css", rel="stylesheet")
+    link(href="public/css/main.css", rel="stylesheet")
     //
       =======================================================
       * Template Name: Yummy
@@ -32,7 +32,7 @@ html(lang="en")
       .container.position-relative.d-flex.align-items-center.justify-content-between
         a.logo.d-flex.align-items-center.me-auto.me-xl-0(href="index.html")
           // Uncomment the line below if you also wish to use an image logo
-          // <img src="assets/img/logo.png" alt="">
+          // <img src="assets/img/logo.png" alt="log image">
           h1.sitename HHG 
             small Store
           span .
@@ -63,7 +63,7 @@ html(lang="en")
                         | We are happy to have you here!
                       .d-flex(data-aos="fade-up", data-aos-delay="200")
                     .col-lg-5.order-1.order-lg-2.hero-img(data-aos="zoom-out")
-                      img.img-fluid.animated(src="public/css/image/produce/home.jpg", alt="produce-image")
+                      img.img-fluid.animated(src="public/image/produce/home.jpg", alt="produce-image")
               // /Hero Section
               // Menu Section
               section#menu.menu.section
@@ -89,37 +89,37 @@ html(lang="en")
                           .row.gy-5
                             // image src change images
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/css/image/produce/Beans.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/image/Beans.jpg", alt="produce-image")
                               h4 Beans
                               p.qunatity
                                 | 595 Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/css/image/produce/Maize.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/image/Maize.jpg", alt="produce-image")
                               h4 Grain-maize
                               p.qunatity
                                 | 1495Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/css/image/produce/Cowpeas.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/image/Cowpeas.jpg", alt="produce-image")
                               h4 Cowpeas
                               p.qunatity
                                 | 895Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/css/image/produce/G-nuts.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/image/G-nuts.jpg", alt="produce-image")
                               h4 G-nuts
                               p.qunatity
                                 | 1295Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/css/image/produce/rice.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/image/rice.jpg", alt="produce-image")
                               h4 Rice
                               p.qunatity
                                 | 1296Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/css/image/produce/Soybeans.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="public/image/Soybeans.jpg", alt="produce-image")
                               h4 Soybeans
                               p.qunatity
                                 | 995Tonnes
