added files in public and views folder respectively

--- a/views/all-user.pug
+++ b/views/all-user.pug
@@ -4,24 +4,24 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title All-users-page
-    link(rel="stylesheet", href="public/css/all-user.css")
+    link(rel="stylesheet", href="/css/all-user.css")
   body
     header
       nav
         ul
           li
-            a(href="index.html") Home
+            a(href="/index") Home
           li
-            a(href="Stock.html") Stocks
+            a(href="/Stock") Stocks
           li
-            a(href="user.html") All-user-Page
+            a(href="/user") All-user-Page
           li
-            a(href="Logout.html") Logout
+            a(href="/Logout") Logout
     main
       section#user-profile
         h2 User Profile
         .profile-details
-          img.profile-pic(src="assets/img/produce/home.jpg", alt="User Profile Picture")
+          img.profile-pic(src="/imge/home.jpg", alt="User Profile Picture")
           .info
             p
               strong Name:
