--- a/views/sales-agent-dashboard.pug
+++ b/views/sales-agent-dashboard.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title salesagent page
-    link(rel="stylesheet", href="assets/css/manager-dashboard.css")
+    link(rel="stylesheet", href="/css/manager-dashboard.css")
   body
     h1 salesagent Dashboard!
     p We&apos;re glad to have you here.
