--- a/views/stocklist.pug
+++ b/views/stocklist.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title Stock Page
-    Link(rel="stylesheet" href="assets/css/stocklist.css")     
+    Link(rel="stylesheet" href="/css/stocklist.css")     
   body
     h1 Stock List
     table
