--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@ html(lang="en")
     link(href="assets/vendor/glightbox/css/glightbox.min.css", rel="stylesheet")
     link(href="assets/vendor/swiper/swiper-bundle.min.css", rel="stylesheet")
     // Main CSS File
-    link(href="public/css/main.css", rel="stylesheet")
+    link(href="/css/main.css", rel="stylesheet")
     //
       =======================================================
       * Template Name: Yummy
@@ -63,7 +63,7 @@ html(lang="en")
                         | We are happy to have you here!
                       .d-flex(data-aos="fade-up", data-aos-delay="200")
                     .col-lg-5.order-1.order-lg-2.hero-img(data-aos="zoom-out")
-                      img.img-fluid.animated(src="public/image/produce/home.jpg", alt="produce-image")
+                      img.img-fluid.animated(src="/image/home.jpg", alt="produce-image")
               // /Hero Section
               // Menu Section
               section#menu.menu.section
@@ -89,37 +89,37 @@ html(lang="en")
                           .row.gy-5
                             // image src change images
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/image/Beans.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="/image/Beans.jpg", alt="produce-image")
                               h4 Beans
                               p.qunatity
                                 | 595 Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/image/Maize.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="/image/Maize.jpg", alt="produce-image")
                               h4 Grain-maize
                               p.qunatity
                                 | 1495Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/image/Cowpeas.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="/image/Cowpeas.jpg", alt="produce-image")
                               h4 Cowpeas
                               p.qunatity
                                 | 895Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/image/G-nuts.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="/image/G-nuts.jpg", alt="produce-image")
                               h4 G-nuts
                               p.qunatity
                                 | 1295Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/image/rice.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="/image/rice.jpg", alt="produce-image")
                               h4 Rice
                               p.qunatity
                                 | 1296Tonnes
                             // Menu Item
                             .col-lg-4.menu-item
-                              img.menu-img.img-fluid(src="public/image/Soybeans.jpg", alt="produce-image")
+                              img.menu-img.img-fluid(src="/image/Soybeans.jpg", alt="produce-image")
                               h4 Soybeans
                               p.qunatity
                                 | 995Tonnes
@@ -176,11 +176,11 @@ html(lang="en")
                                   // Preloader
                                   #preloader
                                   // Vendor JS Files
-                                  script(src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js")
-                                  script(src="assets/vendor/php-email-form/validate.js")
-                                  script(src="assets/vendor/aos/aos.js")
-                                  script(src="assets/vendor/glightbox/js/glightbox.min.js")
-                                  script(src="assets/vendor/purecounter/purecounter_vanilla.js")
-                                  script(src="assets/vendor/swiper/swiper-bundle.min.js")
+                                  script(src="/vendor/bootstrap/js/bootstrap.bundle.min.js")
+                                  script(src="/vendor/php-email-form/validate.js")
+                                  script(src="/vendor/aos/aos.js")
+                                  script(src="/vendor/glightbox/js/glightbox.min.js")
+                                  script(src="/vendor/purecounter/purecounter_vanilla.js")
+                                  script(src="/vendor/swiper/swiper-bundle.min.js")
                                   // Main JS File
-                                  script(src="assets/js")
+                                  script(src="/js/main.js")
