--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Login-page
-    link(rel="stylesheet", href="public/css/login.css")
+    link(rel="stylesheet", href="/css/login.css")
   body
     h2 Login
     form(action="/login", method="POST")
