--- a/views/signup.pug
+++ b/views/signup.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Signup Page
-    link(rel="stylesheet", href="assets/css/signup.css")
+    link(rel="stylesheet", href="/css/signup.css")
   body
     h2 Sign Up
     form(action="/register", method="POST")
