updated views files and public files

--- a/public/css/addstock.css
+++ b/public/css/addstock.css
@@ -3,7 +3,7 @@
 /* General Styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: palevioletred;
     margin: 0;
     padding: 0;
     display: flex;
@@ -20,7 +20,7 @@ body {
   
   /* Form Styles */
   form {
-    background-color: #fff;
+    background-color: powderblue;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
