--- a/public/css/stocklist.css
+++ b/public/css/stocklist.css
@@ -47,3 +47,19 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #f1f1f1;
 }
+
+.edit-btn{
+    text-decoration: none;
+    width: 30px;
+    height: 3px;
+    border: 1px solid black;
+    background-color: rgb(137, 209, 137);
+    color:white;
+    padding: 5px;
+    font-size: smaller;
+}
+
+.delete-btn{
+    background-color: rgb(207, 104, 104);
+    color: white;
+}
