--- a/views/addsaleslist.pug
+++ b/views/addsaleslist.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Add Sales
-    link(rel="stylesheet", href="assets/css/addsales.css")
+    link(rel="stylesheet", href="/css/addsales.css")
   body
     .container
       h1 Add Sales
