--- a/views/saleslist.pug
+++ b/views/saleslist.pug
@@ -4,7 +4,7 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Sales List - page
-    link(rel="stylesheet", href="assets/css/saleslist.css")
+    link(rel="stylesheet", href="/css/saleslist.css")
   body
     header
       .logo Happy Hoe Grocery Store
