my projection section 3

--- a/views/all-user.pug
+++ b/views/all-user.pug
@@ -10,11 +10,11 @@ html(lang="en")
       nav
         ul
           li
-            a(href="/index") Home
+            a(href="/") Home
           li
-            a(href="/Stock") Stocks
+            a(href="/all-stock-page") Stocks
           li
-            a(href="/user") All-user-Page
+            a(href="/all-users-page") All-user-Page
           li
             a(href="/Logout") Logout
     main
@@ -60,5 +60,5 @@ html(lang="en")
           li Beans
           li Soybeans
           li Cowpeas
-        button Add user
-    footer
+        button Add user
+    footer
