--- a/views/makecreditsales.pug
+++ b/views/makecreditsales.pug
@@ -4,7 +4,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Make Credit Sales
-    link(rel="stylesheet", href="assets/css/makecreditsales.css")
+    link(rel="stylesheet", href="/css/upadecreditsales.css")
+    
   body
     header.header
       h1 Happy Hoe Grocery Store Credit Sales
