--- a/views/sales-agent-dashboard.pug
+++ b/views/sales-agent-dashboard.pug
@@ -9,6 +9,6 @@ html(lang="en")
     h1 salesagent Dashboard!
     p We&apos;re glad to have you here.
     a(href="/all-users-page") See All sales
-    a(href="/all-stock-page") Creditsales
+    a(href="/add-creditsales-page") Creditsales
     a(href="/add-stock-page") Add New sales
     a(href="/logout") Logout
