--- a/views/saleslist.pug
+++ b/views/saleslist.pug
@@ -1,38 +1,33 @@
 doctype html
 html(lang="en")
   head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Sales List - page
-    link(rel="stylesheet", href="/css/saleslist.css")
+    title Sales List
+    link(rel="stylesheet" href="/css/saleslist.css")
+    link(rel="stylesheet" href="/css/stocklist.css")   
   body
-    header
-      .logo Happy Hoe Grocery Store
-      nav
-        ul
-          li
-            a(href="index.html") Home
-          li
-            a(href="stocklist.html") stocklist
-          li
-            a(href="sales.html") Sales
-          li
-            a(href="logout.html") logout
-    section.sales-section
-      h2 saleslist
-      .sales-grid
-        .sales-item
-          img(src="assets/img/produce/Maize.jpg", alt="maize")
-          h3 maize
-          p.buying-price 5000ug per kg
-          p.selling-price 6000ug per kg
-          button Add to Cart
-        .sales-item
-          img(src="assets/img/produce/Beans.jpg", alt="Beans")
-          h3 Beans
-          p.buying-price 6000ug per kg
-          p.selling-price 7000ug per kg
-          button Add to Cart
-        // Add more sales items as needed
-    footer
-      p &amp;copy; 2024 HHG Store. All rights reserved.
+    h1 Sales List
+    table
+      thead
+        tr
+          th Produce Name
+          th Quality
+          th Price Per kg
+          th Total Amount
+          th Action
+          th
+      tbody
+        each sale in sales
+          tr
+            td #{sale.producename}
+            td #{sale.quantity}
+            td #{sale.price}
+            td #{sale.total}
+            td 
+              a(href="/update-sales-page/"+sale._id class="edit-btn") Edit
+            td
+              form(method="POST" action="/delete-sale")
+                input(type="hidden" name="id" value=sale._id)  
+                button(class="delete-btn" type="submit") Delete
+        else 
+          tr
+            td(colspan="6") No sales added yet!
