--- a/views/saleslist.pug
+++ b/views/saleslist.pug
@@ -3,7 +3,8 @@ html(lang="en")
   head
     title Sales List
     link(rel="stylesheet" href="/css/saleslist.css")
-    link(rel="stylesheet" href="/css/stocklist.css")   
+    link(rel="stylesheet" href="/css/stocklist.css")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous")   
   body
     h1 Sales List
     table
@@ -28,6 +29,8 @@ html(lang="en")
               form(method="POST" action="/delete-sale")
                 input(type="hidden" name="id" value=sale._id)  
                 button(class="delete-btn" type="submit") Delete
+            td
+             a.btn.btn-primary(href='/receipt/' + sale._id) Receipt
         else 
           tr
             td(colspan="6") No sales added yet!
