my finall project presentation

--- a/views/makecreditsales.pug
+++ b/views/makecreditsales.pug
@@ -11,7 +11,7 @@ html(lang="en")
     header.header
       h1 Happy Hoe Grocery Store Credit Sales
       nav.navbar
-        a(href="/sales-agent/dashboard") Sales Agent Dashboard
+        a(href="/sales-agent-dashboard-page") Sales Agent Dashboard
         a(href="/add-stock-page") Stock
         a(href="/add-sales-page") Make Sales
         a(href="/add-creditsales-page") Make Credit Sales
