--- a/views/receipt.pug
+++ b/views/receipt.pug
@@ -14,7 +14,7 @@ html
       .receipt-container {
         max-width: 600px;
         margin: 0 auto;
-        background-color: light-yellow;
+        background-color: lightyellow;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         padding: 20px;
