--- a/views/sales-agent-dashboard.pug
+++ b/views/sales-agent-dashboard.pug
@@ -8,7 +8,7 @@ html(lang="en")
   body
     h1 salesagent Dashboard!
     p We&apos;re glad to have you here.
-    a(href="/all-users-page") See All sales
+    a(href="/saleslist-page") See All sales
     a(href="/add-creditsales-page") Creditsales
-    a(href="/add-stock-page") Add New sales
+    a(href="/add-sales-page") Add New sales
     a(href="/logout") Logout
